# django-admin-pandasai

./: .gitignore  README.md  example.env  pyproject.toml
chats/: admin.py  apps.py  models.py  services.py  urls.py  views.py
chats/agent/: __init__.py  config.py  connectors.py  parser.py
chats/migrations/: 0001_initial.py
chats/static/chat/css/: style.css
chats/static/chat/js/: chat.js
chats/templates/admin/chat/: chat_form.html
chats/templatetags/: custom_filters.py
common/: admin.py
config/: settings.py  urls.py
docs/models/: conversations.mmd  movies.mmd
movies/: admin.py  models.py
movies/migrations/: 0001_initial.py  0002_populate.py
